@@ -9,8 +9,8 @@ endif
 .PHONY: default
 default: startup all
 
-.PHONY: headers library clean veryclean all binary program doc test
-all headers library clean veryclean binary program doc dirs test:
+.PHONY: headers library clean veryclean all binary program doc test update-po
+startup all headers library clean veryclean binary program doc dirs test update-po:
 	$(MAKE) -C apt-pkg $@
 	$(MAKE) -C apt-inst $@
 	$(MAKE) -C methods $@
@@ -20,6 +20,8 @@ all headers library clean veryclean binary program doc dirs test:
 	$(MAKE) -C doc $@
 	$(MAKE) -C po $@
 	$(MAKE) -C test $@
+
+update-po: startup
 
 # Some very common aliases
 .PHONY: maintainer-clean dist-clean distclean pristine sanity 
